--- a/anvil.yaml
+++ b/anvil.yaml
@@ -1,7 +1,9 @@
-allow_embedding: false
-package_name: Navigation
-db_schema: []
-name: Navigation
-renamed: true
-runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox}
 services: []
+package_name: Navigation
+allow_embedding: false
+name: Navigation
+runtime_options: {version: 2, client_version: '3', server_version: python3-sandbox}
+metadata: {}
+startup_form: null
+db_schema: []
+renamed: true
